--- a/app/src/main/res/layout/fragment_social_media.xml
+++ b/app/src/main/res/layout/fragment_social_media.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/colorGrey">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -85,7 +86,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/background_top_social_media"
             app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
             app:layout_constraintTop_toBottomOf="@id/linearlayout">
