--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -19,4 +19,10 @@
         android:icon="@drawable/ic_recipe"
         android:title="@string/menu_bottom_my_recipes"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_to_social_media_fragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_social_media"
+        android:title="@string/menu_bottom_social_media"
+        app:showAsAction="ifRoom" />
 </menu>
