--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -12,4 +12,11 @@
         app:showAsAction="ifRoom"
         />
 
+    <item
+        android:id="@+id/menu_logout"
+        android:icon="@drawable/ic_logout_black_24dp"
+        android:title="@string/menu_logout"
+        app:showAsAction="ifRoom"
+        />
+
 </menu>
