--- a/app/src/main/res/layout/fragment_social_media.xml
+++ b/app/src/main/res/layout/fragment_social_media.xml
@@ -67,14 +67,16 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_large_margin"
                 android:layout_marginStart="10dp"
+                android:layout_gravity="center_vertical"
                 android:contentDescription="@string/description_image"
                 app:srcCompat="@drawable/ic_anon_user_48dp" />
 
             <TextView
-                android:id="@+id/profile_activity_app_mode_button"
+                android:id="@+id/profile_activity_top_description"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_large_margin"
+                android:layout_gravity="center_vertical"
                 android:padding="@dimen/default_margin"
                 android:text="@string/social_media_description"
                 android:textColor="@color/colorAccent"
@@ -86,9 +88,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:background="@drawable/background_top_social_media"
-            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
             app:layout_constraintTop_toBottomOf="@id/linearlayout">
 
 
@@ -129,26 +130,77 @@
                 app:layout_constraintGuide_percent="1" />
 
             <View
-                android:id="@+id/middle_line"
+                android:id="@+id/middle_line_left"
                 android:layout_width="1dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/colorGrey"
-                app:layout_constraintBottom_toBottomOf="@id/bottombisGuideline"
-                app:layout_constraintEnd_toEndOf="@id/middlebisGuideline"
-                app:layout_constraintStart_toStartOf="@id/middlebisGuideline"
-                app:layout_constraintTop_toTopOf="@id/topGuideline" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/sub_constraint_1"
+                app:layout_constraintEnd_toStartOf="@id/sub_constraint_2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <View
+                android:id="@+id/middle_line_right"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/colorGrey"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/sub_constraint_2"
+                app:layout_constraintEnd_toStartOf="@id/sub_constraint_3"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="0dp"
+                android:id="@+id/sub_constraint_1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_extra_large_margin"
-                android:layout_marginEnd="@dimen/default_extra_large_margin"
-                app:layout_constraintStart_toStartOf="@id/firstbisGuideline"
-                app:layout_constraintEnd_toEndOf="@id/middlebisGuideline"
-               app:layout_constraintTop_toTopOf="@id/topGuideline"
-                app:layout_constraintBottom_toBottomOf="@id/bottombisGuideline"
+                app:layout_constraintRight_toLeftOf="@+id/sub_constraint_2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                >
+
+
+
+                <ImageView
+                    android:id="@+id/image_camera_post"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:contentDescription="@string/description_image"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_camera" />
+
+                <TextView
+                    android:id="@+id/title_camera_post"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:text="@string/social_media_camera_post"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/default_text_size"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/image_camera_post"
+                    app:layout_constraintStart_toEndOf="@id/image_camera_post"
+                    app:layout_constraintTop_toTopOf="@id/image_camera_post" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/sub_constraint_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintRight_toLeftOf="@+id/sub_constraint_3"
+                app:layout_constraintVertical_chainStyle="spread_inside"
+                app:layout_constraintLeft_toRightOf="@+id/sub_constraint_1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 >
 
 
@@ -178,16 +230,15 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="0dp"
+                android:id="@+id/sub_constraint_3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_extra_large_margin"
-                android:layout_marginEnd="@dimen/default_extra_large_margin"
-                app:layout_constraintStart_toStartOf="@id/middlebisGuideline"
-                app:layout_constraintEnd_toEndOf="@id/secondbisGuideline"
-                app:layout_constraintTop_toTopOf="@id/topGuideline"
-                app:layout_constraintBottom_toBottomOf="@id/bottombisGuideline">
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_chainStyle="spread_inside"
+                app:layout_constraintLeft_toRightOf="@+id/sub_constraint_2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/image_tips_post"
@@ -230,11 +281,12 @@
             android:id="@+id/no_post_found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@id/recyclerview"
+            app:layout_constraintBottom_toBottomOf="@id/recyclerview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/social_media_no_post"
+            android:visibility="gone"
             />
 
 
