Implementing tablayout with icon, and retrieve network call

--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -1,42 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ingredientslist.ui.SearchIngredientsActivity"
+android:orientation="vertical">
 
-<!-- 1 | Main Activity RootView -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainContainer"
+<!-- Toolbar -->
+<include
+    layout="@layout/toolbar" />
+
+<com.google.android.material.tabs.TabLayout
+    android:id="@+id/tabs"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    app:tabMode="fixed"
+    android:background="?attr/colorPrimaryDark"
+    android:minHeight="?attr/actionBarSize"
+    app:tabGravity="fill"
+    app:tabTextColor="@color/colorAccent"
+    app:tabIconTint="@color/colorWhite"
+    app:tabSelectedTextColor="@color/colorAccent"
+    app:tabIndicatorColor="@color/colorWhite"
+    />
+<androidx.viewpager.widget.ViewPager
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
-    <!-- Toolbar -->
-    <include
-        layout="@layout/toolbar" />
-
-
-    <fragment
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:navGraph="@navigation/search_ingredient_nav_graph"
-        app:defaultNavHost="true"
-        android:id="@+id/navHostIngredient"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:layout_above="@id/activity_search_ingredient_bottom_navigation"
-       >
-
-    </fragment>
-
-    <!-- Bottom Navigation View -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/activity_search_ingredient_bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"
-        app:itemIconTint="@drawable/bottom_navigation_color"
-        app:itemTextColor="@drawable/bottom_navigation_color"
-        app:menu="@menu/ingredient_bottom_navigation_menu" />
-
-</RelativeLayout>
+</LinearLayout>
