--- a/app/src/main/res/layout/fragment_social_media.xml
+++ b/app/src/main/res/layout/fragment_social_media.xml
@@ -2,6 +2,7 @@
 
 
 <androidx.core.widget.NestedScrollView
+    android:id="@+id/nested_scroll_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
