--- a/app/src/main/res/layout/item_social_media.xml
+++ b/app/src/main/res/layout/item_social_media.xml
@@ -98,7 +98,7 @@
             android:contentDescription="@string/description_image"
             app:layout_constraintTop_toTopOf="@id/username"
             app:layout_constraintBottom_toBottomOf="@id/username"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toRightOf="@id/title"
             app:srcCompat="@drawable/ic_delete_black_24dp"
             android:tint="@color/black_three"
             />
@@ -107,6 +107,7 @@
             android:id="@+id/update_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginEnd="25dp"
             android:contentDescription="@string/description_image"
             app:layout_constraintTop_toTopOf="@id/profile_image"
             app:layout_constraintBottom_toBottomOf="@id/profile_image"
