--- a/app/src/main/res/layout/fragment_social_media.xml
+++ b/app/src/main/res/layout/fragment_social_media.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <View
             android:id="@+id/greyoftop"
             android:layout_width="match_parent"
@@ -20,7 +21,6 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/colorGrey"
-
             app:layout_constraintEnd_toEndOf="@id/middleGuideline"
             app:layout_constraintStart_toStartOf="@id/middleGuideline"
             app:layout_constraintTop_toTopOf="parent" />
@@ -274,7 +274,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/constraint" />
 
@@ -287,10 +287,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/social_media_no_post"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.core.widget.NestedScrollView>
 
