--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
     <!-- Toolbar -->
     <include
+        android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
 
@@ -38,5 +39,39 @@
         app:menu="@menu/bottom_navigation_menu" />
 
 
+    <FrameLayout
+        android:id="@+id/animation_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:visibility="gone"
+        android:clickable="true"
+        android:layout_below="@id/toolbar"
+        android:layout_above="@id/activity_main_bottom_navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/loader_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:text="@string/we_research_recipes_for_you"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view"
+            android:layout_width="58dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="10816-walking-taco.json"
+            app:lottie_loop="true" />
+    </FrameLayout>
 
 </RelativeLayout>
