--- a/app/src/main/res/layout/item_recipe_steps.xml
+++ b/app/src/main/res/layout/item_recipe_steps.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
+
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="wrap_content"
     tools:context=".recipes.ui.RecipeDetailActivity">
 
     <TextView
         android:id="@+id/itemNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:textColor="@color/colorAccent"
+        android:layout_marginBottom="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_margin"
         android:textSize="13sp"
         android:text="@string/step_recipe"
         app:layout_constraintBottom_toBottomOf="parent"
