--- a/app/src/main/res/layout/fragment_social_media.xml
+++ b/app/src/main/res/layout/fragment_social_media.xml
@@ -1,13 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.core.widget.NestedScrollView
-    android:id="@+id/nested_scroll_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorGrey">
+    android:background="@color/colorGrey"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+        <FrameLayout
+            android:id="@+id/animation_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+           android:background="@color/colorWhite"
+            android:visibility="visible"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+
+            <TextView
+                android:id="@+id/loader_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
+                android:text="@string/social_media_community"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                />
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animation_view"
+                android:layout_width="58dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="10816-walking-taco.json"
+                app:lottie_loop="true" />
+        </FrameLayout>
+
+
+
+
+<androidx.core.widget.NestedScrollView
+    android:id="@+id/nested_scroll_view"
+   android:visibility="gone"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -276,7 +319,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/constraint" />
+            app:layout_constraintTop_toBottomOf="@id/constraint"
+            />
 
         <TextView
             android:id="@+id/no_post_found"
@@ -294,4 +338,4 @@
 
 
 </androidx.core.widget.NestedScrollView>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
