--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -19,7 +19,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/default_large_margin"
             android:orientation="vertical">
 
@@ -164,14 +164,15 @@
             <ExpandableListView
                 android:id="@+id/expandableListView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="@dimen/default_large_margin"
                 android:layout_marginEnd="15dp"
                 android:divider="@android:color/darker_gray"
                 android:dividerHeight="0.5dp"
                 android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-                app:layout_constraintTop_toBottomOf="@id/view" />
+                app:layout_constraintTop_toBottomOf="@id/view"
+                app:layout_constraintBottom_toTopOf="@id/summaryViewConstraintLayout"/>
 
             <!-- LINEARLAYOUT -->
 
@@ -184,7 +185,6 @@
                 android:background="@color/colorWhite"
                 android:elevation="1dp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/expandableListView">
