--- a/app/src/main/res/layout/item_recipe_detail_list_expandable_item.xml
+++ b/app/src/main/res/layout/item_recipe_detail_list_expandable_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/expandedListItem"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
         android:paddingTop="10dp"
