--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -164,11 +164,12 @@
             <ExpandableListView
                 android:id="@+id/expandableListView"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="@dimen/default_large_margin"
                 android:layout_marginEnd="15dp"
                 android:divider="@android:color/darker_gray"
+                android:nestedScrollingEnabled="true"
                 android:dividerHeight="0.5dp"
                 android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                 app:layout_constraintTop_toBottomOf="@id/view"
