--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -43,6 +43,7 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/description_image"
                 android:scaleType="centerCrop"
+                android:elevation="1dp"
                 app:layout_constraintCircle="@id/activity_recipe_detail_kcal_image"
                 app:layout_constraintCircleAngle="15"
                 app:layout_constraintCircleRadius="120dp"
