Fix bug with tablayout and optimize code

--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -25,9 +25,9 @@ android:orientation="vertical">
     app:tabSelectedTextColor="@color/colorAccent"
     app:tabIndicatorColor="@color/colorWhite"
     />
-<androidx.viewpager.widget.ViewPager
-    android:id="@+id/pager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
