--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,10 +15,10 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textColor="@color/colorGrey"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="@dimen/default_title_size"
-        android:layout_marginTop="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_large_margin"
         android:textStyle="bold" />
 
 
@@ -26,11 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nav_header_app_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center">
+        android:gravity="left">
 
         <ImageView
             android:id="@+id/nav_header_profile_image"
@@ -41,25 +40,15 @@
             app:srcCompat="@drawable/ic_anon_user_48dp" />
 
 
-        <!-- NOM, PRENOM, EMAIL -->
         <TextView
             android:id="@+id/nav_header_FirstName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_gravity="center"
             android:text="@string/firstname"
             android:textColor="@color/black_three"
             android:layout_marginStart="@dimen/default_large_margin"
-            app:layout_constrainedWidth="true"/>
-
-        <TextView
-            android:id="@+id/nav_header_LastName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/lastname"
-            android:textColor="@color/black_three"
-            android:layout_marginStart="@dimen/default_margin"
             app:layout_constrainedWidth="true"/>
 
 
