--- a/app/src/main/res/layout/fragment_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_all_recipes.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_ingredient_list_rootview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -35,6 +45,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- DECLARING FLOATING ACTION BUTTON -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabSize="normal"
+        app:layout_anchor="@id/recyclerview"
+        app:layout_anchorGravity="bottom|right|end"
+        app:srcCompat="@drawable/ic_filter_list_black_24dp" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
