--- a/app/src/main/res/layout/fragment_my_ingredients_list.xml
+++ b/app/src/main/res/layout/fragment_my_ingredients_list.xml
@@ -65,7 +65,7 @@
 
     <!-- DECLARING FLOATING ACTION BUTTON -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fragment_ingredient_list_floating_button"
+        android:id="@+id/floating_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
