--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -11,6 +11,11 @@
         />
 
     <item
+        android:id="@+id/menu_info"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/menu_info"
+        />
+    <item
         android:id="@+id/menu_logout"
         android:icon="@drawable/ic_logout_black_24dp"
         android:title="@string/menu_logout"
